@@ -7,28 +7,34 @@
 # 3: remove all batch scripts
 ##############################
 
+
 for obs in {0..17}
-do
-echo ------ OBS $obs ------
-for fit in {3..13}
-do
-echo ....... $fit .......
+  do
+  echo ------ OBS $obs ------
+  for fit in {3..13}
+    do
+    echo ....... $fit .......
 
-if [ $1 == 1 ]; then
-./makeJobsForMe $fit $obs
-fi
+    if [ $1 == 1 ]; then
+	if [ ! -d "$job_directory_CHI2" ]; then
+	    mkdir -p  $job_directory_CHI2
+	fi
+	cd $job_directory_CHI2
+	./makeJobsForMe $fit $obs
+    fi
 
-if [ $1 == 2 ]; then
-cd $job_directory_CHI2/$obs/$fit/
-./batchAllJobs
-fi
+    if [ $1 == 2 ]; then
+	cd $job_directory_CHI2/$obs/$fit/
+	./batchAllJobs
+    fi
 
-if [ $1 == 3 ]; then
-rm $obs/$fit/job_postProcessing_fittino.out.point*merged*
-fi
+    if [ $1 == 3 ]; then
+	cd $job_directory_CHI2
+	rm $obs/$fit/job_postProcessing_fittino.out.point*merged*
+    fi
 
 
-done
+  done
 done
 
 
